@@ -52,6 +52,8 @@
                                 <arg>javafx.graphics/com.sun.javafx.geometry=scenebuilder.core.api</arg>
                                 <arg>--add-exports</arg>
                                 <arg>javafx.graphics/com.sun.javafx.scene=scenebuilder.core.api</arg>
+                                <arg>--add-exports</arg>
+                                <arg>javafx.fxml/com.sun.javafx.fxml=scenebuilder.core.api</arg>
                                 <arg>--add-opens</arg>
                                 <arg>javafx.fxml/javafx.fxml=scenebuilder.core.api</arg>
                             </compilerArgs>
